--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "sourceMap": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -23,10 +19,7 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "declaration": true,
-    "declarationDir": "./dist",
+    "declarationDir": "./dist"
   },
-  "include": [
-    "src/**/*",
-    "declarations.d.ts"
-  ]
+  "include": ["src/**/*", "declarations.d.ts"]
 }
