--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@enigma-lake/play-controller-sdk",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A React component library for building gameplay interfaces",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "typings": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
   "type": "module",
-  "style": "./dist/style.css",
+  "style": "dist/style.css",
   "scripts": {
     "build": "tsc && rollup -c --bundleConfigAsCjs",
     "start": "webpack serve --mode development --open",
@@ -19,14 +19,11 @@
   "author": "",
   "license": "ISC",
   "files": [
-    "./dist",
-    "./dist/style.css",
-    "./dist/index.js",
-    "./dist/index.d.ts"
+    "dist",
+    "dist/style.css",
+    "dist/index.js",
+    "dist/index.d.ts"
   ],
-  "exports": {
-    "./style.css": "./dist/style.css"
-  },
   "peerDependencies": {
     "@enigma-lake/zoot-platform-sdk": "1.0.7",
     "@types/react": "^19.0.7",
